# skill-composer

./: .gitignore  README.md
.claude-plugin/: plugin.json
hooks/: __init__.py  hooks.json
hooks/promptsubmit/: __init__.py  runner.py
hooks/promptsubmit/phases/: __init__.py  prompt_optimizer.py
reasoning-mcp/: .gitignore  README.md  pyproject.toml
reasoning-mcp/.claude/tdd-guard/data/: test.json
reasoning-mcp/src/reasoning_mcp/: __main__.py  models.py  prompts.py  server.py
reasoning-mcp/tests/: test_integration.py  test_server.py
skills-system/: README.md  test_spans_live.py
skills-system/db/: connection.py  event.py  models.py
skills-system/hooks/pre_compact/: skill_queue_flush.py
skills-system/hooks/promptsubmit/: runner.py
skills-system/utils/: skill_output.py
skills-system/workers/: resume.py
skills/exec-opt/: SKILL.md
skills/exec-opt/references/: bridge.md  compose.md  delegate.md  drift.md  flip.md  gap.md  lens-bezos.md  lens-clausewitz.md  lens-feynman.md  lens-inflection.md  lens-ive.md  lens-lamport.md  lens-miles.md  lens-orwell.md  lens-popper.md  lens-socrates.md  lens-taleb.md  lens-tufte.md  rank.md  rotate.md  scale.md  sequence.md  stress.md  surface.md  (+1 more)
skills/mode-clarify/: SKILL.md
skills/mode-compare/: SKILL.md
skills/mode-handoff/: SKILL.md
skills/mode-judge/: SKILL.md
skills/mode-preflight/: SKILL.md
skills/mode-question-heavy/: SKILL.md
skills/mode-question-light/: SKILL.md
skills/mode-research/: SKILL.md
skills/mode-teach-me/: SKILL.md
skills/mode-trace/: SKILL.md
skills/mode-verify/: SKILL.md
(+13 files in other folders)
