[project]
name = "reasoning-mcp"
version = "0.1.0"
description = "MCP server for structured reasoning with tactics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[project.scripts]
reasoning-mcp = "reasoning_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning_mcp"]
